--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                       <li><a class="dropdown-item" href="#">Masculino</a></li>
                       <li><a class="dropdown-item" href="#">Feminino</a></li>
                       <li><a class="dropdown-item" href="#">Infantil</a></li>
-                      <li><a class="dropdown-item" href="#">Todes</a></li>
+                      <li><a class="dropdown-item" href="#">Todos</a></li>
                     </ul>
                   </li>
                   
